--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "----------------------------------------------- TEST": "SECTION",
+    "test": "npm run prettier && npm run stylelint && npm run eslint",
+    "test:autofix": "npm run prettier:autofix && npm run stylelint:autofix && npm run eslint:autofix",
+    "----------------------------------------------- TEST-INNER": "SECTION",
+    "prettier": "prettier . --check",
+    "prettier:autofix": "npm run prettier -- --write",
+    "eslint": "eslint . --cache --cache-location ./.cache/.eslintcache",
+    "eslint:autofix": "npm run eslint -- --fix",
+    "stylelint": "stylelint \"./src/sass/**/*.scss\" --allow-empty-input",
+    "stylelint:autofix": "npm run stylelint -- --fix"
   },
   "author": {
     "name": "Oleg Dutchenko",
@@ -11,11 +20,28 @@
   },
   "license": "MIT",
   "dependencies": {
-    "webpack": "^5.2.0"
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "autoprefixer": "^10.0.1",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.0",
+    "cssnano": "^4.1.10",
+    "microbe-ui": "^2.1.0",
+    "postcss-loader": "^4.0.4",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-sort-media-queries": "^2.1.10",
+    "sass": "^1.27.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
-    "@stripped-ui/eslint-config": "0.0.4-alpha.0",
+    "@stripped-ui/eslint-config": "0.0.6-beta.0",
+    "@stripped-ui/stylelint-config-scss": "0.0.6-beta.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.11.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "stylelint": "^13.7.2"
   }
 }
