--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve --config config/webpack.development.js",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.production.js",
     "----------------------------------------------- TEST": "SECTION",
     "test": "npm run prettier && npm run stylelint && npm run eslint",
     "test:autofix": "npm run prettier:autofix && npm run stylelint:autofix && npm run eslint:autofix",
@@ -34,6 +35,8 @@
     "html-webpack-plugin": "^4.5.0",
     "jquery": "^3.5.1",
     "microbe-ui": "^2.1.0",
+    "mini-css-extract-plugin": "^1.2.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.1.4",
     "postcss-loader": "^4.0.4",
     "postcss-preset-env": "^6.7.0",
@@ -41,6 +44,7 @@
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.0.2",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
